# paperd

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE.md  Package.resolved  Package.swift  README.md
Sources/Paperd/: CitationGraphView.swift  ContentView.swift  DashboardView.swift  JobMonitorView.swift  Localizable.xcstrings  MarkdownTab.swift  OwnPapersNetworkView.swift  PDFTab.swift  PaperdApp.swift  SettingsView.swift
Sources/PaperdCLI/: main.swift
Sources/PaperdCore/Bibtex/: BibtexGenerator.swift  CitationFormatter.swift
Sources/PaperdCore/Chunking/: Chunker.swift  DoclingDocument.swift  MarkdownChunkSource.swift
Sources/PaperdCore/Citations/: CitationFetcher.swift  CitationStore.swift
Sources/PaperdCore/Database/: AppDatabase.swift
Sources/PaperdCore/Graph/: ForceLayout.swift
Sources/PaperdCore/Ingest/: IngestPipeline.swift  JobRunner.swift  LiveStageExecutors.swift
Sources/PaperdCore/Jobs/: JobQueue.swift
Sources/PaperdMCP/: main.swift
Sources/PaperdMCPKit/: JSONRPC.swift  MCPServer.swift  PaperdTools.swift
Tests/PaperdTests/: AgentInstallerTests.swift  BibliographicSearchTests.swift  BibtexTests.swift  ChunkerTests.swift  CitationFormatterTests.swift  CitationSupplementTests.swift  CitationTests.swift  CorrectionTests.swift  FlagsAndOwnNetworkTests.swift  Helpers.swift  IdentifierTests.swift  IngestPipelineTests.swift  JobQueueTests.swift  LibraryStoreTests.swift  LocalPDFTests.swift  MCPAccessLogTests.swift  MCPProcessTests.swift  MCPTests.swift  MarkdownBlockParserTests.swift  MetadataSanitizerTests.swift  MetadataTests.swift  PDFAttachmentTests.swift  PDFImportScannerTests.swift  PaperExportTests.swift  PreResolutionTests.swift  SearchPresentationTests.swift  SearchTests.swift  SkillInstallerTests.swift  UIBackingTests.swift  WebpageResolutionTests.swift  WorkerClientTests.swift
agents/: paperd-citation-analyst.md  paperd-web-researcher.md
design/: AppIcon.icns  AppIconGenerator.swift
docs/: 00-overview.md  01-architecture.md  02-data-model.md  03-library-layout.md  04-ingest-pipeline.md  05-pdf-conversion.md  06-search-rag.md  07-mcp-server.md  08-citation-graph.md  09-ui.md  10-roadmap-risks.md  11-browser-capture.md  12-research-orchestration.md
scripts/: make-app.sh  make-appicon.sh  release-entitlements.plist  release.sh
skills/paperd-cite/: SKILL.md
skills/paperd-fix-conversion/: SKILL.md
skills/paperd-research/: SKILL.md
worker/: README.md  pyproject.toml
worker/src/paperd_worker/: __init__.py  app.py  engines.py  errors.py  idle.py  jobs.py  main.py
worker/tests/: conftest.py  test_app.py  test_idle.py
(+25 files in other folders)
