[project]
name = "paperd-worker"
version = "0.2.2"
description = "paperd Python worker: PDF conversion (Docling) and embeddings (Qwen3-Embedding MLX) over localhost HTTP"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
# Heavy ML runtime. Lazily imported at runtime only.
ml = [
    "ocrmac>=1.0",
    "docling>=2.0",
    "mlx>=0.31",
    "mlx-lm>=0.31",
]
# Test deps. PEP 735 [dependency-groups] is not standard pip; keep here so
# `pip install -e ".[dev]"` works.
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
paperd-worker = "paperd_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperd_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
